correct navbar on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,12 +17,12 @@
     background-color: #cccccc;
     background-attachment: fixed;
     height: calc(100vh - 200px);
-    margin: 0, auto;
+    margin: 0 auto;
   }
 
   .container {
     background: linear-gradient(to bottom, rgba(255, 255, 255, .6), rgba(255, 255, 255, .4));
-    margin: 0, auto;
+    margin: 0 auto;
     padding: 30px;
     border-radius: 10px;
   }
@@ -31,7 +31,8 @@
     color: #343a40;
   }
   nav{
-    height: 200px;    
+    /* height: 200px;   */
+    padding-top: 10px;
   }
   .navbar-brand{
     height: 120px;
@@ -43,6 +44,7 @@
     background: linear-gradient(to bottom, rgba(255, 255, 255, .8), rgba(255, 255, 255, .4));
     padding: 35px;
     border-radius: 10px;
+    margin-top: 10px;
   }
   a.nav-link{
     color: rgba(57, 127, 189);
